0.50: #dev
    + Mentions tab
    + Different badge colors for unread tweets/mentions
    + Some stats about user in profile page

0.49: #ba29a57dcc
    * Again, fixing favicons

0.48:
    + Omnibox user search
    - No more rounded corners support for OS X
    * Services favicons are fixed

0.47:
    + User not found message in profile
    * Unique suggest boxes for each account

0.46:
    * Favicon size fixed

0.45:
    - Temporarily no google maps
    * No more tweet buttons flicker
    * New Twitter icon
    * Tweet length calculator is fixed for text with https links
    * Default Windows fonts is Segoe UI, Trebuchet MS, Tahoma, Verdana
    + New icons for tweet editor
    * Shortened images preview is now fixed

0.44:
    * Nothing changed, just for WebStore to pass

0.43:
    * Fixed switching between images and map tweet info
    * Fixed bug when trying to reply with Meta+Enter on OS X
    * Fixed bug with geoinfo in tweets
    - No more donate button

0.42:
    + Showing inline preview for raw linked images
    + Ability to insert the page title with url on attach button click with modifier key
    + Using metaKey as a modifier in OS X
    * Geolocation getter is now limited for 5 seconds

0.41:
    * Avoid flicker while using backspace in reply
    + Ability to change the space after user nick in reply with some punctuation symbol
    + Ability to view the home timeline directly on twitter.com

0.40:
    * Better links handling with middle mouse key or with Meta key pressed in OS X
    + Support for image preview for services:
        - imgur.com
        - yfrog.com
        - img.ly
        - twitpic.com
        - instagr.am

0.39:
    * Fixed bug with back button on profile page after some action with confirmation (#78)

0.38:
    * Fixed bug when links and media are not recognized in retweets
    * Fixed bug with services icon strange border
    * Even better links recognition
    + New option to create a link to the tweet on twitter.com from time mark
