@@ -2,6 +2,7 @@
     + Mentions tab
     + Different badge colors for unread tweets/mentions
     + Some stats about user in profile page
+    * Using static google maps for location based tweets
 
 0.49: #ba29a57dcc
     * Again, fixing favicons
